# nasa-space-apps

./: .gitignore  README.md  annotations.json  fetch_footprints.py  fetch_footprints_copy.py  kill-port.sh  pyproject.toml  run.sh  source.sh  start.sh  static_fetch_footprints.py  stop.sh  tile_map.json  uv_setup.sh
.github/: copilot-instructions.md
backend/: main.py  path_test.py  pyproject.toml  requirements.txt
docs/: API.md  OVERVIEW.md
embeddings/: earth_1.npy  earth_2.npy  earth_3.npy  earth_4.npy  earth_5.npy  hirise_test_data_0.npy  hirise_test_data_1.npy  hirise_test_data_2.npy  hirise_test_data_3.npy  hirise_test_data_4.npy  hirise_test_data_5.npy  hirise_test_data_6.npy  mars_0.npy  mars_1.npy  mars_2.npy  mars_3.npy  mars_4.npy  mars_5.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_10.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_11.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_12.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_7.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_8.npy  mars_viking_vis_mro_ctx_22n048w_mosaic_9.npy  mars_viking_vis_mro_ctx_acheron_fossae_mosaic_10.npy  mars_viking_vis_mro_ctx_acheron_fossae_mosaic_6.npy  mars_viking_vis_mro_ctx_acheron_fossae_mosaic_8.npy  mars_viking_vis_mro_ctx_acheron_fossae_mosaic_9.npy  mro_ctx,_22n048w_mosaic_1004b8_0.npy  mro_ctx_22n048w_mosaic_11.npy  mro_ctx_22n048w_mosaic_12.npy  mro_ctx_22n048w_mosaic_6.npy  mro_ctx_22n048w_mosaic_9d7553_7.npy  mro_ctx_acheron_fossae_mosaic_2dc1e1_7.npy
faiss_indexes/: earth_1.index  earth_2.index  earth_3.index  earth_4.index  earth_5.index  hirise_test_data_1.index  (+27 more)
(+175 files in other folders)
