[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "Pillow",
    "scikit-learn",
    "torch==2.3.1+cpu",
    "torchvision==0.18.1+cpu",
    "timm>=1.0.19",
    "faiss-cpu>=1.12.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"
