[project]
name = "backend"
version = "0.1.0"
requires-python = "^3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "Pillow",
    "scikit-learn",
    "torch==2.3.1+cpu",
    "torchvision==0.18.1+cpu",
    "timm>=1.0.19",
    "faiss-cpu>=1.12.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.1",
    "rasterio>=1.4.3",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"
